# ponyexpress-telegram

./: README.md  pyproject.toml
.github/workflows/: main.yml
ponyexpress_telegram/: __init__.py  main.py  telegram.py  utils.py
tests/: test_main.py  test_package.py
