[tool.poetry]
name = "ponyexpress-telegram"
version = "1.0.0"
description = "A Telegram-scraper for ponyexpress."
authors = ["Philipp Kessling"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
loguru = "*"
PyYAML = "*"
requests = "^2.28.2"
lxml = "^4.9.2"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
coverage = "*"
pdoc3 = "*"
pre-commit = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report html:tests/coverage --cov=ponyexpress_telegram --capture=sys"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
telegram = 'ponyexpress_telegram.main:cli'
